# mcp-execute-command

./: README.md  pyproject.toml
mcp_execute_command/: __init__.py  server.py
tests/: __init__.py  test_server.py
